<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="camera_name">Rangi - Camera</string>
    <string name="app_name">Rangi</string>
    <string name="m_square_tool">Square</string>
    <string name="m_circle_tool">Circle</string>
    <string name="m_freehand_tool">Freehand</string>
    <string name="m_analyze_tool">Analyze</string>
    <string name="top_ten_colors"></string>
    <string name="gallery">Gallery</string>
    <string name="saved_colors">Saved Colors</string>
    <string name="save_color">Save Color</string>
    <string name="camera">Camera</string>
    <string name="in_app_payment">Get Premium</string>
    <string name="settings">Settings</string>
    <string name="splash_image">splash_image</string>
    <string name="logo">logo</string>
    <string name="menu">Rangi</string>
    <string name="color_headline">Color</string>
    <string name="hex_headline">Hexadecimal</string>
	<string name="hsv_headline">HSV</string>
	<string name="rgb_headline">RGB</string>
    
    <!-- Settings strings -->
    <string name="color_options">Color options</string>
    <string name="num_of_colors">Colors</string>
    <string name="num_of_colors_summary">Number of colors to get from an image</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Register -->
    <string name="explanation">Rangi Registration</string>
    <string name="password_repeat">Repeat password</string>
    <string name="email">E-mail</string>

    <!-- Login/Register Main menu -->
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <!-- DUMP -->
    <string name="mainmenu_button">Jump to MainMenu</string>
    <string name="logout_button">Logout</string>
    <string name="num_of_saved">Max colors</string>
    <string name="num_of_saved_summary">Max number of colors that can be saved</string>
    <string name="server_options">Server Options</string>
    <string name="sync_server">Sync data</string>
    <string name="sync_server_summary">Sync data with server (Colors)</string>
    <string name="delete_color">Delete Color</string>
    <string name="no_colors_saved">No colors saved</string>
    <string name="ncs_headline">NCS</string>
</resources>
