<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  >
    <PreferenceCategory
            android:title="@string/color_options">

        <se.tdp025.Rangi.settings.SeekBarPreference
                android:key="number_of_colors"
                android:title="@string/num_of_colors"
                android:summary="@string/num_of_colors_summary"
                android:defaultValue="6"
                android:max="25"
                />

        <se.tdp025.Rangi.settings.SeekBarPreference
                android:key="number_of_saved"
                android:title="@string/num_of_saved"
                android:summary="@string/num_of_saved_summary"
                android:defaultValue="5"
                android:max="25"
                />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/server_options">

           <CheckBoxPreference
               android:key="sync_server"
               android:title="@string/sync_server"
               android:summary="@string/sync_server_summary"
               android:checked="true"
               />
    </PreferenceCategory>
</PreferenceScreen>