<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#f0f0f0">
              
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#6b7f6a"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launcher" 
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/saved_colors"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f0f0f0" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/no_colors_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/no_colors_saved"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#868686"
        android:visibility="gone" />

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/list"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

</LinearLayout>