<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ColorInfo_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ColorInfo_titleBar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal" >

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#f0f0f0"
        android:gravity="top|left"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical" >
    
    <TextView
        android:id="@+id/hex_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_headline"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/hex_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#868686" />
    
    <TextView
        android:id="@+id/hsv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hsv_headline"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/hsv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#868686" />

    <TextView
        android:id="@+id/rgb_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgb_headline"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/rgb_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#868686" />
    
    </LinearLayout>
    <Button
            android:id="@+id/save_color_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:onClick="saveColor"
            android:padding="10dp"
            android:text="@string/save_color"
            android:textColor="#6b7f6a"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />
 

</LinearLayout>