<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top|center_horizontal"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#6b7f6a"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/launcher" 
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f0f0f0" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="#f0f0f0"
	    android:gravity="center_vertical|center_horizontal|center"
	    android:orientation="vertical"
	    android:scrollbars="vertical" >

        <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center_vertical|center_horizontal|center"
                android:onClick="login"
                android:padding="10dp"
                android:text="@string/login_button"
                android:textColor="#6b7f6a"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

        <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center_vertical|center_horizontal|center"
                android:onClick="register"
                android:padding="10dp"
                android:text="@string/register_button"
                android:textColor="#6b7f6a"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

        <Button
                android:id="@+id/mainmenu_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center_vertical|center_horizontal|center"
                android:onClick="mainmenu"
                android:padding="10dp"
                android:text="@string/mainmenu_button"
                android:textColor="#6b7f6a"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />
		</LinearLayout>
</LinearLayout>
